--- a/PhishTrainer.Api/appsettings.Development.json
+++ b/PhishTrainer.Api/appsettings.Development.json
@@ -2,5 +2,6 @@
   "ConnectionStrings": {
     "DefaultConnection": "Host=10.252.0.25;Port=5432;Database=PhishTrainerDev;Username=phishtrainer;Password=1758BigHairyDogWranglers!"
   },
-  "Logging": { "LogLevel": { "Default": "Information", "Microsoft.AspNetCore": "Warning" } }
+  "Logging": { "LogLevel": { "Default": "Information", "Microsoft.AspNetCore": "Warning" } },
+  "PublicBaseUrl": "http://localhost:5018"
 }
